Fix spacing and mobile issues.
Animate mobile menu.
Fix Events and Main page margin.

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@
   margin-right: 1em
 }
 
+.mobileMain {
+  display: none;
+}
+
 .socialIcon {
   margin-left: 2em;
   font-size: 1em;
@@ -64,12 +68,20 @@
 }
 
 @media all and (max-width: 779px) {
+  .containerMain {
+    display: none;
+  }
+
   .fullSidebar {
     display: none;
   }
 
   .iconContainer {
     display: none;
+  }
+
+  .mobileMain {
+    display: block;
   }
 
   .sidebarDivider {
